@@ -1,5 +1,7 @@
 
 5.2a2 -> 5.2a3:
+    - jbj: rpmbuild: enumerate all the lexical patterns in parsePreamble().
+    - jbj: rpmbuild: enable pattern validation for simple package identifiers.
     - jbj: rpmbuild: add tag data validation pattern checks.
     - jbj: EVRtuple: handle EVR_t opaquely in python labelCompare().
     - jbj: EVRtuple: postpone committing to single "missing" value for now.
